--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
   <title>Notre app d'amour 💖</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
-      color: #fff;
-      text-align: center;
-      padding: 2rem;
+      <style>
+  body {
+    font-family: 'Arial', sans-serif;
+    background-image: url('accueil.jpg'); /* Chemin de ton image */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #fff;
+    text-align: center;
+    padding: 2rem;
+  }
+  ...
+</style>
+
     }
     h1 {
       font-size: 3rem;
