--- a/calendrier.html
+++ b/calendrier.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-image: url('amour.jpg');
+    background-image: url('accueil.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -32,10 +32,9 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-  }
-  #monthYear {
-    font-size: 1.5rem;
+    color: white;
     font-weight: bold;
+    font-size: 1.5rem;
   }
   button.control-btn {
     background: #ff6f91;
@@ -44,8 +43,9 @@
     border-radius: 8px;
     color: white;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.2rem;
     transition: background-color 0.3s;
+    user-select: none;
   }
   button.control-btn:hover {
     background: #ff3c78;
@@ -126,9 +126,9 @@
 </form>
 
 <div id="calendar-controls">
-  <button class="control-btn" id="prevMonthBtn">⬅️ Mois précédent</button>
-  <div id="monthYear">Mai 2025</div>
-  <button class="control-btn" id="nextMonthBtn">Mois suivant ➡️</button>
+  <button class="control-btn" id="prevMonthBtn" aria-label="Mois précédent">⬅️</button>
+  <div id="monthYear" aria-live="polite" aria-atomic="true">Mai 2025</div>
+  <button class="control-btn" id="nextMonthBtn" aria-label="Mois suivant">➡️</button>
 </div>
 
 <div id="calendar"></div>
@@ -253,15 +253,18 @@
         title: titleVal
       });
       alert("Événement ajouté !");
-      form.reset();
-
-      createCalendar(currentYear, currentMonth);
-    } catch (err) {
-      alert("Erreur lors de l'ajout : " + err.message);
+      titleInput.value = '';
+      // Si l'événement est dans le mois affiché, on rafraîchit
+      const [y,m,d] = dateVal.split('-').map(Number);
+      if(y === currentYear && (m-1) === currentMonth) {
+        createCalendar(currentYear, currentMonth);
+      }
+    } catch(error) {
+      alert("Erreur lors de l'ajout: " + error.message);
     }
   });
 
-  // Boutons mois précédent / suivant
+  // Gestion boutons mois précédent/suivant
   prevMonthBtn.addEventListener('click', () => {
     currentMonth--;
     if(currentMonth < 0) {
@@ -280,13 +283,11 @@
     createCalendar(currentYear, currentMonth);
   });
 
-  // Init affichage calendrier mois courant
-  const today = new Date();
-  currentYear = today.getFullYear();
-  currentMonth = today.getMonth();
-
+  // Init au mois courant
+  const now = new Date();
+  currentYear = now.getFullYear();
+  currentMonth = now.getMonth();
   createCalendar(currentYear, currentMonth);
-
 </script>
 
 </body>
