--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <nav>
     <a href="index.html">Accueil</a>
     <a href="calendrier.html">Calendrier</a>
+    <a href="carte.html">Carte</a>  <!-- <-- Lien ajouté -->
   </nav>
 
   <h1>❤️ Rémi & India ❤️</h1>
