--- a/calendrier.html
+++ b/calendrier.html
@@ -106,10 +106,11 @@
 </head>
 <body>
 
-<nav>
-  <a href="index.html">Accueil</a>
-  <a href="calendrier.html">Calendrier</a>
-</nav>
+ <nav>
+    <a href="index.html">Accueil</a>
+    <a href="calendrier.html">Calendrier</a>
+    <a href="carte.html">Carte</a>  <!-- <-- Lien ajouté -->
+  </nav>
 
 <h1>Calendrier d'amour 💖</h1>
 
@@ -122,6 +123,8 @@
     Titre de l'événement :
     <input type="text" id="titleInput" placeholder="Ex: Anniversaire" required />
   </label>
+
+  
   <button type="submit">Ajouter l'événement</button>
 </form>
 
