--- a/carte.html
+++ b/carte.html
@@ -19,6 +19,12 @@
 </head>
 <body>
 
+     <nav>
+    <a href="index.html">Accueil</a>
+    <a href="calendrier.html">Calendrier</a>
+    <a href="carte.html">Carte</a>  <!-- <-- Lien ajouté -->
+  </nav>
+  
 <select id="user-select">
   <option value="">-- Choisis un utilisateur --</option>
   <option value="india">India</option>
