--- a/carte.html
+++ b/carte.html
@@ -7,9 +7,13 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     nav {
-      position: absolute;
-      top: 15px;
-      left: 15px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: white; /* fond blanc pour le ruban */
+      padding: 10px 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       z-index: 1000;
     }
     nav a {
@@ -17,26 +21,36 @@
       text-decoration: none;
       margin-right: 15px;
       font-weight: bold;
-      text-shadow: none;
       font-family: Arial, sans-serif;
     }
     nav a:hover {
       text-decoration: underline;
     }
 
+    body {
+      margin: 0;
+      padding-top: 50px; /* espace sous le nav fixe */
+      font-family: Arial, sans-serif;
+    }
+
+    #user-select {
+      margin: 10px 15px;
+      font-size: 1.1rem;
+      display: block;
+      max-width: 200px;
+    }
+
+    #status {
+      margin: 10px 15px;
+      font-weight: bold;
+      color: black;
+    }
+
     #map { 
       height: 80vh; 
-      margin-top: 60px; /* pour laisser la place au nav */
-      margin-bottom: 1rem; 
-    }
-    #user-select {
-      margin: 10px;
-      font-size: 1.1rem;
-    }
-    #status {
-      margin: 10px;
-      font-weight: bold;
-      font-family: Arial, sans-serif;
+      margin: 10px 15px 20px 15px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
   </style>
 </head>
